fix positioning of select field arrows on mobile

--- a/src/apps/Bradley/Pages/LiteratureAndChipSamples/CurrentRequest/Shipment/ShippingInfo/ShippingInfoForm/ShippingInfoForm.scss
+++ b/src/apps/Bradley/Pages/LiteratureAndChipSamples/CurrentRequest/Shipment/ShippingInfo/ShippingInfoForm/ShippingInfoForm.scss
@@ -57,8 +57,10 @@
   }
 
   .mailingAddress {
-    &::after {
-      right: 20px;
+    @include respond-to(tablet) {
+      &::after {
+        right: 20px;
+      }
     }
   }
 
